Add www redirect to haproxy.cfg

--- a/src/haproxy/haproxy.cfg
+++ b/src/haproxy/haproxy.cfg
@@ -12,8 +12,17 @@ frontend http-in
   bind *:80
   reqadd X-Forwarded-Proto:\ http
 
+  option httplog
+  log stdout local0
+
   acl is_cert_validation path -i -m beg "/.well-known/acme-challenge/"
   use_backend cert-provider if is_cert_validation
+
+  acl host_www hdr(host) -i "www.${HAPROXY_HOSTNAME}"
+  use_backend backend_www if host_www
+
+  acl host_bare hdr(host) -i "${HAPROXY_HOSTNAME}"
+  use_backend backend_www if host_bare
 
   acl host_api hdr_dom(host) -i "api.${HAPROXY_HOSTNAME}"
   use_backend backend_api if host_api
@@ -51,6 +60,12 @@ frontend https-in
   acl host_api hdr_dom(host) -i "api.${HAPROXY_HOSTNAME}"
   use_backend backend_api if host_api
 
+  acl host_www hdr_dom(host) -i "www.${HAPROXY_HOSTNAME}"
+  use_backend backend_www if host_www
+
+  acl host_bare hdr_dom(host) -i "${HAPROXY_HOSTNAME}"
+  use_backend backend_www if host_bare
+
   acl host_registry hdr_dom(host) -i "registry.${HAPROXY_HOSTNAME}"
   use_backend backend_registry if host_registry
 
@@ -65,6 +80,12 @@ backend backend_api
   option forwardfor
   balance roundrobin
   server balena_api_1 api:80 check port 80
+
+backend backend_www
+  mode http
+  option forwardfor
+  balance roundrobin
+  server balena_www_1 "www.${HAPROXY_HOSTNAME}":8888
 
 backend backend_registry
   mode http
