Add dashboard subdomain

--- a/src/haproxy/haproxy.cfg
+++ b/src/haproxy/haproxy.cfg
@@ -11,6 +11,8 @@ frontend http-in
   option forwardfor
   bind *:80
   reqadd X-Forwarded-Proto:\ http
+  redirect scheme https code 301 if !{ ssl_fc }
+
 
   option httplog
   log stdout local0
@@ -18,11 +20,8 @@ frontend http-in
   acl is_cert_validation path -i -m beg "/.well-known/acme-challenge/"
   use_backend cert-provider if is_cert_validation
 
-  acl host_www hdr(host) -i "www.${HAPROXY_HOSTNAME}"
-  use_backend backend_www if host_www
-
-  acl host_bare hdr(host) -i "${HAPROXY_HOSTNAME}"
-  use_backend backend_www if host_bare
+  acl host_dashboard hdr(host) -i "dashboard.${HAPROXY_HOSTNAME}"
+  use_backend backend_dashboard if host_dashboard
 
   acl host_api hdr_dom(host) -i "api.${HAPROXY_HOSTNAME}"
   use_backend backend_api if host_api
@@ -52,6 +51,8 @@ backend redirect-to-https-in
   server localhost 127.0.0.1:444 send-proxy-v2
 
 frontend https-in
+  option httplog
+  log stdout local0
   mode http
   option forwardfor
   bind 127.0.0.1:444 ssl crt /etc/ssl/private/open-balena.pem accept-proxy
@@ -60,11 +61,8 @@ frontend https-in
   acl host_api hdr_dom(host) -i "api.${HAPROXY_HOSTNAME}"
   use_backend backend_api if host_api
 
-  acl host_www hdr_dom(host) -i "www.${HAPROXY_HOSTNAME}"
-  use_backend backend_www if host_www
-
-  acl host_bare hdr_dom(host) -i "${HAPROXY_HOSTNAME}"
-  use_backend backend_www if host_bare
+  acl host_dashboard hdr_dom(host) -i "dashboard.${HAPROXY_HOSTNAME}"
+  use_backend backend_dashboard if host_dashboard
 
   acl host_registry hdr_dom(host) -i "registry.${HAPROXY_HOSTNAME}"
   use_backend backend_registry if host_registry
@@ -81,11 +79,14 @@ backend backend_api
   balance roundrobin
   server balena_api_1 api:80 check port 80
 
-backend backend_www
+backend backend_dashboard
   mode http
   option forwardfor
   balance roundrobin
-  server balena_www_1 "www.${HAPROXY_HOSTNAME}":8888
+  #server balena_dashboard_1 cakebread.io:8888 ssl verify none
+  # WORKS! server balena_dashboard_1 cakebread.io:8888 check port 8888
+  server balena_dashboard_1 "git.${HAPROXY_HOSTNAME}":8080 check port 8080
+
 
 backend backend_registry
   mode http
